# transliterator

./: CMakeLists.txt  main.cpp  widget.cpp  widget.hpp  widget.ui
